# shmfeeder

./: Cargo.toml  LICENSE-MIT  README.md  TODO
examples/: consumer.rs  producer.rs
src/: consumer.rs  error.rs  heartbeats.rs  layout.rs  lib.rs  main.rs  mempool.rs  producer.rs  queue.rs
tests/: consumer.rs  producer.rs
